testsuite/tests/grammar/invalid_lexers/case_2.lkt
import common

lexer foo_example {
    Foo <- null
    match p"foo" {
        else send(Foo, 3)
    }
}
